--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.password=
 
 spring.jpa.show-sql=true
 spring.jpa.properties.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
+#create-drop
 
-spring.flyway.enabled=false
+spring.flyway.enabled=true
