--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 	<name>library</name>
 	<description>Library Rest API</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>1.8</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -66,6 +66,7 @@
 	</dependencies>
 
 	<build>
+		<finalName>library-app</finalName>
 		<plugins>
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
