--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.h2.console.enable=true
+spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:library;DB_CLOSE_DELAY=-1
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
